李燕飞：修改案件类图片集合
